--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
             <div class="row">
                 <div class="col-lg-12 footer">
-               Made with <i class=""></i> by <a href="{{site.company_url}}">{{site.company_name}}</a>  <br />
+               Made with <i class="fa fa-hand-peace-o"></i> by <a href="{{site.company_url}}">{{site.company_name}}</a>  <br />
 {% if page.last_updated %}<p>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }}
                 </div>
             </div>
