--- a/_layouts/default_print.html
+++ b/_layouts/default_print.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-<head>
-    {% include head_print.html %}
-
-
-</head>
-
-<body class="{% if page.type == "title"%}title{% elsif page.type == "frontmatter" %}frontmatter{% elsif page.type == "first_page" %}first_page{% endif %} print">
-
-<!-- Page Content -->
-<div class="container">
-    <!-- Content Column -->
-    <div class="col-md-9">
-
+  <head>
+      {% include head_print.html %}
+  </head>
+  <body class="{% if page.type == "title"%}title{% elsif page.type == "frontmatter" %}frontmatter{% elsif page.type == "first_page" %}first_page{% endif %} print">
+    <div class="container">
+      <div class="col-md-9">
         {{content}}
+      </div>
     </div>
-
-</div>    <!-- /.container -->
-
-</body>
-
+  </body>
 </html>
-
