--- a/assets/css/slides.css
+++ b/assets/css/slides.css
@@ -7,3 +7,16 @@
   max-width: none;
   max-height: none;
 }
+
+.reveal section img.no-border {
+  border: none;
+  box-shadow: none;
+}
+
+.reveal code {
+  padding: 0 3px;
+  background-color: #3f3f3f;
+  border-radius: 5px;
+  font-family: monospace;
+  padding: 0px 15px 0px 15px;
+}
