--- a/assets/css/slides.css
+++ b/assets/css/slides.css
@@ -18,5 +18,17 @@
   background-color: #3f3f3f;
   border-radius: 5px;
   font-family: monospace;
-  padding: 0px 15px 0px 15px;
+}
+
+.reveal pre {
+  width: 100%;
+}
+
+.reveal pre code{
+  max-height: none;
+  padding: 15px 0px 15px 15px;
+  background-color: transparent;
+  border: 5px solid #7F7F7F;
+  border-radius: 5px;
+  font-family: monospace;
 }
